--- a/cv.tex
+++ b/cv.tex
@@ -83,7 +83,7 @@
 
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
-  \textbf{\Large Ruslan Sakevych} & xlionell@gmail.com\\
+  \textbf{\Large Ruslan Sakevych} & rsakevych@gmail.com\\
   github.com/lionell & 1-650-391-5608\\
 \end{tabular*}
 
