Update resume w/ skills and add Emacs formatting hook

--- a/cv.tex
+++ b/cv.tex
@@ -108,15 +108,16 @@
       {Facebook}{Seattle, WA}
       {Software Engineer}{Oct 2019 - Present}
       \resumeItemListStart
-	\resumeItem{Designed and implemented service that computes Probabilistic Flakiness Score in real-time via Bayesian inference.}
-	\resumeItem{Scaled PFS service CPU utilization 10x, latency 20x, number of replicas 7.5x via profiling/caching/parallelism.}
-	\resumeItem{Post with details: https://engineering.fb.com/2020/12/10/developer-tools/probabilistic-flakiness/}
-	\resumeItem{Replaced statistical model with stochastic ML one for sizing(memory-wise) CI workflows.}
-	\resumeItem{New Job Sizer model reduced memory utilization by 30\% and out-of-memory rate by 17\%.}
-	\resumeItem{Achieved another 12\% improvement in MSLE by doing feature engineering for Job Sizer model.}
-	\resumeItem{Prototyped an ML based model for the CI workflow ETA estimation.}
-	\resumeItem{It reduced MSLE by 50\% and allows to control confidence levels of the prediction (thx to Monte-Carlo dropout).}
-	\resumeItem{This gives a way to show uncertanty to user and not only point-estimate (UX research finds this misleading).}
+        \resumeItem{Was part of Test Infrastructure team and then Continuous Integration Analytics team (CIA).}
+        \resumeItem{Designed and implemented service that computes Probabilistic Flakiness Score in real-time via Bayesian inference.}
+        \resumeItem{Scaled PFS service CPU utilization 10x, latency 20x, number of replicas 7.5x via profiling/caching/parallelism.}
+        \resumeItem{Post with details: https://engineering.fb.com/2020/12/10/developer-tools/probabilistic-flakiness/}
+        \resumeItem{Replaced statistical model with stochastic ML one for sizing(memory-wise) CI workflows.}
+        \resumeItem{New Job Sizer model reduced memory utilization by 30\% and out-of-memory rate by 17\%.}
+        \resumeItem{Achieved another 12\% improvement in MSLE by doing feature engineering for Job Sizer model.}
+        \resumeItem{Prototyped an ML based model for the CI workflow ETA estimation.}
+        \resumeItem{It reduced MSLE by 50\% and allows to control confidence levels of the prediction (thx to Monte-Carlo dropout).}
+        \resumeItem{This gives a way to show uncertanty to user and not only point-estimate (UX research finds this misleading).}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -244,6 +245,36 @@
     \resumeSubItem{Aqua Lang}
       {Data processing language that uses concepts from relational algebra. Opposite to declarative SQL.}
   \resumeSubHeadingListEnd
+
+\section{Skills}
+  \resumeSubHeadingListStart
+    \resumeSubItem{ML}
+      {DNN, NLP, Stochastic models, Bayesian inference, Tensorflow, TFX, PyTorch, PyTorch Lightning}
+    \resumeSubItem{Systems}
+      {Distributed systems, Build/Test infrastructure, CI internals, Build
+        systems, Programming languages}
+    \resumeSubItem{Misc.}
+      {Algorithms \& Data structures, Linux internals, Capture the Flag competitions, Competitive
+        programming}
+  \resumeSubHeadingListEnd
+  % \resumeSubHeadingListStart
+  %   \resumeSubItem{PARCS}
+  %     {Communication Sequential Processes (CSP) like approach for language agnostic distributed computing.}
+  %   \resumeSubItem{PARCS autodiscovery}
+  %     {LAN service autodiscovery for nodes in PARCS cluster based on UDP broadcasting.}
+  %   \resumeSubItem{Smart Pacmans}
+  %     {Visualization of how neural networks can be trained using genetic algorithms. https://lionell.github.io/smart-pacmans}
+  %   \resumeSubItem{Resolution Theorem Prover}
+  %     {Based on sequential method and operates in classic first-order logic.}
+  %   \resumeSubItem{Pollard-Rho}
+  %     {Parallel implementation of Pollard-Rho algorithm in Go. \textbf{Extra}: Ethereum smart-contract impl.}
+  %   \resumeSubItem{Huffman+RLE}
+  %     {Small (1\% on average) optimization for Huffman algorithm followed by run-length-encoding.}
+  %   \resumeSubItem{Parallel PageRank}
+  %     {Based on MPI and OpenMP. Ultimate goal was to compute Wikipedia pagerank.}
+  %   \resumeSubItem{Aqua Lang}
+  %     {Data processing language that uses concepts from relational algebra. Opposite to declarative SQL.}
+  % \resumeSubHeadingListEnd
 
 %
 %--------PROGRAMMING SKILLS------------
