Update resume skills

--- a/cv.tex
+++ b/cv.tex
@@ -224,6 +224,26 @@
 
   \resumeSubHeadingListEnd
 
+%-----------SKILLS-----------------
+\section{Skills}
+  \resumeSubHeadingListStart
+    \resumeSubItem{ML}
+      {DNN, NLP, Stochastic models, Bayesian inference, Tensorflow, TFX, PyTorch, PyTorch Lightning}
+    \resumeSubItem{Systems}
+      {Distributed systems, Build/Test infrastructure, CI internals, Build
+        systems, Programming languages}
+    \resumeSubItem{Languages}
+      {Python, Java, C/C++, Go, PHP/Hack, OCaml, C\#, SQL, Bash, TypeScript, JavaScript}
+    \resumeSubItem{Containers}
+      {Docker, Docker Swarm, Kubernetes, RunC, Linux namespaces, Google's Borg, Facebook's Tupperware}
+    \resumeSubItem{Data processing}
+      {MapReduce, Apache Beam, Hive, Hadoop, Google Flume, Facebook
+        DataSwarm, Google Cloud SQL, Spark SQL, Microsoft Kusto}
+    \resumeSubItem{Misc.}
+      {Algorithms \& Data structures, Linux internals, Capture the Flag competitions, Competitive
+        programming}
+  \resumeSubHeadingListEnd
+
 
 %-----------PROJECTS-----------------
 \section{Projects}
@@ -246,17 +266,6 @@
       {Data processing language that uses concepts from relational algebra. Opposite to declarative SQL.}
   \resumeSubHeadingListEnd
 
-\section{Skills}
-  \resumeSubHeadingListStart
-    \resumeSubItem{ML}
-      {DNN, NLP, Stochastic models, Bayesian inference, Tensorflow, TFX, PyTorch, PyTorch Lightning}
-    \resumeSubItem{Systems}
-      {Distributed systems, Build/Test infrastructure, CI internals, Build
-        systems, Programming languages}
-    \resumeSubItem{Misc.}
-      {Algorithms \& Data structures, Linux internals, Capture the Flag competitions, Competitive
-        programming}
-  \resumeSubHeadingListEnd
   % \resumeSubHeadingListStart
   %   \resumeSubItem{PARCS}
   %     {Communication Sequential Processes (CSP) like approach for language agnostic distributed computing.}
