--- a/cv.tex
+++ b/cv.tex
@@ -93,10 +93,10 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {Taras Shevchenko National University}{Kyiv, Ukraine}
-      {M.S. in Computer Science; GPA: 3.94/4.0}{Sep 2018 -- Jun 2020}
+      {M.S. in Computer Science; GPA: 3.94/5.0}{}
     \resumeSubheading
       {Taras Shevchenko National University}{Kyiv, Ukraine}
-      {B.S. in Computer Science;  GPA: 3.98/4.0}{Sep 2014 -- Jun 2018}
+      {B.S. in Computer Science;  GPA: 3.98/4.0}{}
   \resumeSubHeadingListEnd
 
 
