--- a/cv.tex
+++ b/cv.tex
@@ -84,7 +84,7 @@
 %----------HEADING-----------------
 \begin{tabular*}{\textwidth}{l@{\extracolsep{\fill}}r}
   \textbf{\Large Ruslan Sakevych} & xlionell@gmail.com\\
-  github.com/lionell & 1-650-391-5608\\
+  github.com/lionell & 1-650-732-8050\\
 \end{tabular*}
 
 
@@ -92,11 +92,14 @@
 \section{Education}
   \resumeSubHeadingListStart
     \resumeSubheading
-      {Taras Shevchenko National University}{Kyiv, Ukraine}
-      {M.S. in Computer Science; GPA: 3.94/4.0}{}
+      {University of Washington}{Seattle, USA}
+      {M.S. in Computer Science; GPA: 3.93; Est. grad: 2025 (part-time)}{}
     \resumeSubheading
       {Taras Shevchenko National University}{Kyiv, Ukraine}
-      {B.S. in Computer Science;  GPA: 3.98/4.0}{}
+      {M.S. in Computer Science; GPA: 3.94}{}
+    \resumeSubheading
+      {Taras Shevchenko National University}{Kyiv, Ukraine}
+      {B.S. in Computer Science;  GPA: 3.98}{}
   \resumeSubHeadingListEnd
 
 
@@ -104,20 +107,37 @@
 \section{Experience}
   \resumeSubHeadingListStart
 
+
+    \resumeSubheading
+      {Google}{Seattle, WA}
+      {Software Engineer}{May 2020 - Present}
+      \resumeItemListStart
+	\resumeItem{Lead development of the critical service responsible for microarchitecture selection for executables.}
+	\resumeItem{Evaluated Reinforcement Learning approaches for solving abovementioned problem and prototyped the best one.}
+	\resumeItem{Performed multiple one-off experiments that identified problematic non-cross platform code in the codebase.}
+	\resumeItem{Attempted to learn neural embeddings for the Google's build graph that would work as distance oracles.}
+	\resumeItem{Anticipated poor system integration due to volatility of core metrics used for control.}
+	\resumeItem{Prototyped time-series forecasting (SARIMA) solution to the abovementioned problem.}
+	\resumeItem{Joined Continuous Integration \& Release Infrastructure (CI\&R Infra) team.}
+        \resumeItem{Researched online log clustering problem and developed algorithm that outperformed state-of-the-art LogParser.}
+        \resumeItem{Performed data modeling around A/B experimentation framework that GCP uses to track VM experiments.}
+	\resumeItem{Incorporated various data sources (like Linux kernel subsystems and in-house hypervisor) into VM pipelines.}
+	\resumeItem{Joined GCE VMX Tools and Telemetry team responsible for core services on top of hypervisor and tooling around.}
+      \resumeItemListEnd
+
     \resumeSubheading
       {Facebook}{Seattle, WA}
       {Software Engineer}{Oct 2019 - Present}
       \resumeItemListStart
-        \resumeItem{Was part of Test Infrastructure team and then Continuous Integration Analytics team (CIA).}
-        \resumeItem{Designed and implemented service that computes Probabilistic Flakiness Score in real-time via Bayesian inference.}
+        \resumeItem{Joined Test Infrastructure team which later became Continuous Integration Analytics team (CIA).}
+        \resumeItem{Designed and implemented real-time service for Probabilistic Flakiness Score computation via Bayesian inference.}
         \resumeItem{Scaled PFS service CPU utilization 10x, latency 20x, number of replicas 7.5x via profiling/caching/parallelism.}
-        \resumeItem{Post with details: https://engineering.fb.com/2020/12/10/developer-tools/probabilistic-flakiness/}
+        \resumeItem{Details: https://engineering.fb.com/2020/12/10/developer-tools/probabilistic-flakiness}
         \resumeItem{Replaced statistical model with stochastic ML one for sizing(memory-wise) CI workflows.}
         \resumeItem{New Job Sizer model reduced memory utilization by 30\% and out-of-memory rate by 17\%.}
         \resumeItem{Achieved another 12\% improvement in MSLE by doing feature engineering for Job Sizer model.}
         \resumeItem{Prototyped an ML based model for the CI workflow ETA estimation.}
-        \resumeItem{It reduced MSLE by 50\% and allows to control confidence levels of the prediction (thx to Monte-Carlo dropout).}
-        \resumeItem{This gives a way to show uncertanty to user and not only point-estimate (UX research finds this misleading).}
+        \resumeItem{It reduced MSLE by 50\% and allows to control confidence levels of the prediction (Monte-Carlo dropout layer).}
       \resumeItemListEnd
 
     \resumeSubheading
@@ -129,12 +149,14 @@
         \resumeItem{Was able to automatically(via dashboard) pinpoint culprit changes for recent major regressions.}
       \resumeItemListEnd
 
+    \newpage
+
     \resumeSubheading
       {Google}{Sunnyvale, CA}
       {Software Engineering Intern}{Aug 2018 - Nov 2018}
       \resumeItemListStart
         \resumeItem{Migrated old ML pipeline onto Tensorflow-backed framework TFX. Experience with data processing pipelines.}
-        \resumeItem{Implemented parallel n-ary search algorithm. Speeded up culprit finder 16x times (on millions of changes).}
+        \resumeItem{Implemented parallel N-ary search algorithm. Sped culprit finder up 16x times (on millions of changes).}
         \resumeItem{Designed more sophisticated and robust parallel batching algorithm. Reduced tail request latency 3x times.}
         \resumeItem{Mined build graph of the whole Google using MapReduce. Did an attack on dependency set similarity problem.}
       \resumeItemListEnd
@@ -157,8 +179,6 @@
         \resumeItem{System monitors execution of user-defined query and publishes results back to data warehouse.}
         \resumeItem{Used for intermediate metrics aggregation to reduce data volumes and speed up queries.}
       \resumeItemListEnd
-
-    \newpage
 
     \resumeSubheading
       {Google}{Sunnyvale, CA}
@@ -253,17 +273,17 @@
     \resumeSubItem{PARCS autodiscovery}
       {LAN service autodiscovery for nodes in PARCS cluster based on UDP broadcasting.}
     \resumeSubItem{Smart Pacmans}
-      {Visualization of how neural networks can be trained using genetic algorithms. https://lionell.github.io/smart-pacmans}
+      {Training NN using genetic algorithms (no gradient). See https://lionell.github.io/smart-pacmans}
     \resumeSubItem{Resolution Theorem Prover}
-      {Based on sequential method and operates in classic first-order logic.}
-    \resumeSubItem{Pollard-Rho}
-      {Parallel implementation of Pollard-Rho algorithm in Go. \textbf{Extra}: Ethereum smart-contract impl.}
+      {First-order logic theorem prover that utilizes sequential method under the hood.}
     \resumeSubItem{Huffman+RLE}
       {Small (1\% on average) optimization for Huffman algorithm followed by run-length-encoding.}
-    \resumeSubItem{Parallel PageRank}
-      {Based on MPI and OpenMP. Ultimate goal was to compute Wikipedia pagerank.}
     \resumeSubItem{Aqua Lang}
-      {Data processing language that uses concepts from relational algebra. Opposite to declarative SQL.}
+      {Imperative data processing language that uses raw relational algebra operators. Opposite to SQL (declarative).}
+    \resumeSubItem{Parallel PageRank}
+      {Implemented and compared PageRank on top of MPI and OpenMP when applied to Wikipedia page graph.}
+    \resumeSubItem{Pollard-Rho}
+      {Parallel implementation of Pollard-Rho algorithm in Go. \textbf{Extra}: Ethereum smart-contract impl.}
   \resumeSubHeadingListEnd
 
   % \resumeSubHeadingListStart
