--- a/cv.tex
+++ b/cv.tex
@@ -93,13 +93,13 @@
   \resumeSubHeadingListStart
     \resumeSubheading
       {University of Washington}{Seattle, USA}
-      {M.S. in Computer Science; GPA: 3.93; Est. grad: 2025 (part-time)}{}
+      {M.S. in Computer Science \& Engineering; GPA: 3.83}{2022 - 2025}
     \resumeSubheading
       {Taras Shevchenko National University}{Kyiv, Ukraine}
-      {M.S. in Computer Science; GPA: 3.94}{}
+      {M.S. in Computer Science; GPA: 3.94}{2018 - 2020}
     \resumeSubheading
       {Taras Shevchenko National University}{Kyiv, Ukraine}
-      {B.S. in Computer Science;  GPA: 3.98}{}
+      {B.S. in Computer Science;  GPA: 3.98}{2014 - 2018}
   \resumeSubHeadingListEnd
 
 
@@ -110,24 +110,22 @@
 
     \resumeSubheading
       {Google}{Seattle, WA}
-      {Software Engineer}{May 2020 - Present}
+      {Software Engineer}{May 2021 - Present}
       \resumeItemListStart
 	\resumeItem{Lead development of the critical service responsible for microarchitecture selection for executables.}
-	\resumeItem{Evaluated Reinforcement Learning approaches for solving abovementioned problem and prototyped the best one.}
-	\resumeItem{Performed multiple one-off experiments that identified problematic non-cross platform code in the codebase.}
-	\resumeItem{Attempted to learn neural embeddings for the Google's build graph that would work as distance oracles.}
-	\resumeItem{Anticipated poor system integration due to volatility of core metrics used for control.}
-	\resumeItem{Prototyped time-series forecasting (SARIMA) solution to the abovementioned problem.}
-	\resumeItem{Joined Continuous Integration \& Release Infrastructure (CI\&R Infra) team.}
-        \resumeItem{Researched online log clustering problem and developed algorithm that outperformed state-of-the-art LogParser.}
+	\resumeItem{Prototyped Reinforcement Learning based solution for the architecture selection problem.}
+	\resumeItem{Performed multiple A/B experiments that identified problematic non-cross platform code in the codebase.}
+	\resumeItem{Worked on the neural embeddings for the Google's build graph to approximate distance oracles problem.}
+	\resumeItem{Prototyped time-series forecasting (SARIMAX based) solution to the mitigate the issue below.}
+	\resumeItem{Anticipated poor system accuracy due to volatility of core metrics used for control.}
+        \resumeItem{Developed online log clustering algorithm that outperformed state-of-the-art LogParser at task.}
         \resumeItem{Performed data modeling around A/B experimentation framework that GCP uses to track VM experiments.}
-	\resumeItem{Incorporated various data sources (like Linux kernel subsystems and in-house hypervisor) into VM pipelines.}
-	\resumeItem{Joined GCE VMX Tools and Telemetry team responsible for core services on top of hypervisor and tooling around.}
+	\resumeItem{Incorporated various data sources (Linux kernel subsystems, hypervisor, drivers, etc) into VM pipelines.}
       \resumeItemListEnd
 
     \resumeSubheading
       {Facebook}{Seattle, WA}
-      {Software Engineer}{Oct 2019 - Present}
+      {Software Engineer}{Oct 2019 - May 2021}
       \resumeItemListStart
         \resumeItem{Joined Test Infrastructure team which later became Continuous Integration Analytics team (CIA).}
         \resumeItem{Designed and implemented real-time service for Probabilistic Flakiness Score computation via Bayesian inference.}
@@ -149,8 +147,6 @@
         \resumeItem{Was able to automatically(via dashboard) pinpoint culprit changes for recent major regressions.}
       \resumeItemListEnd
 
-    \newpage
-
     \resumeSubheading
       {Google}{Sunnyvale, CA}
       {Software Engineering Intern}{Aug 2018 - Nov 2018}
@@ -160,6 +156,8 @@
         \resumeItem{Designed more sophisticated and robust parallel batching algorithm. Reduced tail request latency 3x times.}
         \resumeItem{Mined build graph of the whole Google using MapReduce. Did an attack on dependency set similarity problem.}
       \resumeItemListEnd
+
+    \newpage
 
     \resumeSubheading
       {Facebook}{London, UK}
